@startuml

class AppUser {
	{field} +createdAt : OffsetDateTime
	{field} +email : String
	{field} +name : String
	{field} +passwordHash : String
	{field} +phoneNumber : String
	{field} +telegramUserId : String
	{field} +userId : String
	{method} +prePersist () : void
}


interface AppUserRepository {
	{method}  {abstract} +existsByEmailIgnoreCase ( email : String ) : boolean
	{method}  {abstract} +existsByTelegramUserId ( telegramUserId : String ) : boolean
	{method}  {abstract} +existsByTelegramUserIdAndUserIdNot ( telegramUserId : String , userId : String ) : boolean
	{method}  {abstract} +findAllByOrderByNameAsc () : List
	{method}  {abstract} +findByEmailIgnoreCase ( email : String ) : Optional
	{method}  {abstract} +findByTelegramUserId ( telegramUserId : String ) : Optional
}


class TimeEntry {
	{field} +createdAt : OffsetDateTime
	{field} +endedAt : OffsetDateTime
	{field} +id : String
	{field} +minutes : Integer
	{field} +note : String
	{field} +startedAt : OffsetDateTime
}


class TimeEntryController {
	{method} +logTime ( request : TimeEntryRequest ) : ResponseEntity
}


interface TimeEntryRepository {
}


class TimeEntryRequest {
	{field} +minutes : Integer
	{field} +note : String
	{field} +userId : String
	{field} +workItemId : String
}


class TimeEntryResponse {
	{field} ~minutes : Integer
	{field} ~note : String
	{field} ~userId : String
	{field} ~workItemId : String
}


class TimeEntryService {
	{field} {static} -log : Logger
	{method} -findAppUser ( userId : String ) : AppUser
	{method} -findWorkItem ( workItemId : String ) : WorkItem
	{method} +logTime ( request : TimeEntryRequest ) : TimeEntryResponse
	{method} -toResponse ( timeEntry : TimeEntry ) : TimeEntryResponse
	{method} -toTimeEntry ( request : TimeEntryRequest ) : TimeEntry
	{method} -validateRequest ( request : TimeEntryRequest ) : void
}


class WorkItem {
	{field} +assignments : Set
	{field} +completedAt : OffsetDateTime
	{field} +createdAt : OffsetDateTime
	{field} +createdByUserId : String
	{field} +description : String
	{field} +dueDate : LocalDate
	{field} +estimatedMinutes : Integer
	{field} +externalLink : String
	{field} +priority : WorkItemPriority
	{field} +sprintId : String
	{field} +status : String
	{field} +tags : Set
	{field} +title : String
	{field} +updatedAt : OffsetDateTime
	{field} +workItemId : String
	{field} +workType : String
}


interface WorkItemRepository {
	{method}  {abstract} +findAll () : List
	{method}  {abstract} +findAll ( spec : Specification ) : List
	{method}  {abstract} +findById ( id : String ) : Optional
	{method}  {abstract} +findByTelegramUserId ( userId : String ) : List
}




TimeEntry -->  AppUser :  @ManyToOne\nuser
TimeEntry -->  WorkItem :  @ManyToOne\nworkItem
TimeEntryController *--  TimeEntryService : service
TimeEntryService *--  AppUserRepository : appUserRepository
TimeEntryService *--  TimeEntryRepository : timeEntryRepository
TimeEntryService *--  WorkItemRepository : workItemRepository
WorkItem "1" o-- "0..*"  TimeEntry : timeEntries

hide fields
hide methods

@enduml